welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: type mismatch;
 found   : Unit
 required: Int
  for (j <- 0 to L-1) {
         ^